--- a/html/products.html
+++ b/html/products.html
@@ -312,14 +312,6 @@
         <i class="fab fa-whatsapp"></i>
     </a>
 
-    <div class="lantern lantern-left">
-        <img src="https://example.com/ramadan-lantern-left.png" alt="Ramadan Lantern"
-            class="w-full h-full object-cover rounded-full">
-    </div>
-
-    <!-- Main Navigation -->
-
-
     <!-- Page Content -->
     <main class="max-w-7xl mx-auto py-8 px-4 md:px-6 relative z-10">
         <!-- Featured Campaign with Countdown -->
@@ -745,6 +737,8 @@
     <!---------------------------------------- Footer ---------------------------------------->
     <div id="footer-placeholder"></div>
     <!---------------------------------------- Footer ---------------------------------------->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/alpinejs/3.12.0/cdn.min.js" defer></script>
+
 </body>
 
 </html>
