--- a/html/top-donars.html
+++ b/html/top-donars.html
@@ -397,5 +397,7 @@
         </div>
       </div>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/alpinejs/3.12.0/cdn.min.js" defer></script>
+
   </body>
 </html>
