--- a/index.html
+++ b/index.html
@@ -13,14 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;900&display=swap" rel="stylesheet">
     <!-- CSS Link -->
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="/css/waterfall.css">
-
-
-
-
-    <script>
-        
-      </script>
+    <link rel="stylesheet" href="css/waterfall.css">
 </head>
 
 <body>
@@ -39,10 +32,12 @@
                 <h1 class="text-5xl md:text-6xl font-black mb-6 text-white animate-pulse-slow">مساندة السجناء</h1>
                 <p class="text-2xl text-white mb-10 max-w-2xl mx-auto">ساهم في إعادة الأمل لمن فقدوه، وكن سببًا في إعادة
                     حياتهم</p>
-                <button
-                    class="bg-[#D4AF37] text-[#225470] text-xl px-10 py-4 rounded-full font-bold transition-all shadow-xl hover:shadow-2xl">ساهم
-                    الآن
-                </button>
+                    <a href="html/products.html">
+                        <button
+                        class="bg-[#D4AF37] text-[#225470] text-xl px-10 py-4 rounded-full font-bold transition-all shadow-xl hover:shadow-2xl">ساهم
+                        الآن
+                        </button>
+                    </a>
             </div>
         </div>
 
@@ -53,9 +48,12 @@
                 <h1 class="text-5xl md:text-6xl font-black mb-6 text-white animate-pulse-slow">تفريج الديون</h1>
                 <p class="text-2xl text-white mb-10 max-w-2xl mx-auto">أسهم في تخفيف الهموم عن كاهل المدينين والمعسرين
                 </p>
-                <button
-                    class="bg-yellow-400 hover:bg-yellow-500 text-[#225470] text-xl px-10 py-4 rounded-full font-bold transition-all shadow-xl hover:shadow-2xl">ساهم
-                    الآن</button>
+                <a href="html/products.html">
+                    <button
+                        class="bg-yellow-400 hover:bg-yellow-500 text-[#225470] text-xl px-10 py-4 rounded-full font-bold transition-all shadow-xl hover:shadow-2xl">ساهم
+                        الآن
+                    </button>
+                </a>
             </div>
         </div>
 
@@ -65,9 +63,12 @@
             <div class="container mx-auto px-4 z-10 text-center">
                 <h1 class="text-5xl md:text-6xl font-black mb-6 text-white animate-pulse-slow">صناعة المستقبل</h1>
                 <p class="text-2xl text-white mb-10 max-w-2xl mx-auto">مساهمتك تصنع مستقبلًا أفضل لمن يحتاج المساعدة</p>
-                <button
-                    class="bg-yellow-400 hover:bg-yellow-500 text-[#225470] text-xl px-10 py-4 rounded-full font-bold transition-all shadow-xl hover:shadow-2xl">ساهم
-                    الآن</button>
+                <a href="html/products.html">
+                    <button
+                        class="bg-yellow-400 hover:bg-yellow-500 text-[#225470] text-xl px-10 py-4 rounded-full font-bold transition-all shadow-xl hover:shadow-2xl">ساهم
+                        الآن
+                    </button>
+                </a>
             </div>
         </div>
 
@@ -77,9 +78,12 @@
             <div class="container mx-auto px-4 z-10 text-center">
                 <h1 class="text-5xl md:text-6xl font-black mb-6 text-white animate-pulse-slow">تخفيف المعاناة</h1>
                 <p class="text-2xl text-white mb-10 max-w-2xl mx-auto">كل عطاء يخفف معاناة ويرسم البسمة على الوجوه</p>
-                <button
-                    class="bg-yellow-400 hover:bg-yellow-500 text-[#225470] text-xl px-10 py-4 rounded-full font-bold transition-all shadow-xl hover:shadow-2xl">ساهم
-                    الآن</button>
+                <a href="html/products.html">
+                    <button
+                        class="bg-yellow-400 hover:bg-yellow-500 text-[#225470] text-xl px-10 py-4 rounded-full font-bold transition-all shadow-xl hover:shadow-2xl">ساهم
+                        الآن
+                    </button>
+                </a>
             </div>
         </div>
 
@@ -89,9 +93,12 @@
             <div class="container mx-auto px-4 z-10 text-center">
                 <h1 class="text-5xl md:text-6xl font-black mb-6 text-white animate-pulse-slow">الإحسان المستدام</h1>
                 <p class="text-2xl text-white mb-10 max-w-2xl mx-auto">جهود متواصلة لدعم المحتاجين وتمكينهم</p>
-                <button
-                    class="bg-yellow-400 hover:bg-yellow-500 text-[#225470] text-xl px-10 py-4 rounded-full font-bold transition-all shadow-xl hover:shadow-2xl">ساهم
-                    الآن</button>
+                    <a href="html/products.html">
+                        <button
+                            class="bg-yellow-400 hover:bg-yellow-500 text-[#225470] text-xl px-10 py-4 rounded-full font-bold transition-all shadow-xl hover:shadow-2xl">ساهم
+                            الآن
+                        </button>
+                    </a>
             </div>
         </div>
 
@@ -186,7 +193,7 @@
                                 clip-rule="evenodd" />
                         </svg>
                     </a>
-                    <a href="#"
+                    <a href="/html/top-donars.html"
                         class="bg-white border-2 border-[#1E5631] text-[#1E5631] hover:bg-gray-50 px-8 py-4 rounded-lg transition duration-300 shadow-md flex items-center justify-center">
                         <span>أبرز المساهمون</span>
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20"
@@ -270,9 +277,11 @@
                 <div class="p-8 text-right relative">
                     <h3 class="text-2xl font-bold mb-4 text-[#225470]">مساعدة السجناء</h3>
                     <p class="text-[#38755B] mb-8 leading-relaxed">ساهم في إعادة تأهيل السجناء ودعمهم للاندماج في المجتمع مجددًا.</p>
-                    <button class="bg-[#D4AF37] hover:bg-[#B8860B] text-[#225470] px-8 py-3 rounded-full font-bold transition-all shadow-lg hover:shadow-xl flex items-center gap-2 mr-auto">
-                        <span>تبرع الآن</span>
-                    </button>
+                    <a href="html/products.html">
+                        <button class="bg-[#D4AF37] hover:bg-[#B8860B] text-[#225470] px-8 py-3 rounded-full font-bold transition-all shadow-lg hover:shadow-xl flex items-center gap-2 mr-auto">
+                            <span>تبرع الآن</span>
+                        </button>
+                    </a>
                 </div>
             </div>
 
@@ -286,9 +295,11 @@
                 <div class="p-8 text-right relative">
                     <h3 class="text-2xl font-bold mb-4 text-[#225470]">مساعدة المرضى</h3>
                     <p class="text-[#38755B] mb-8 leading-relaxed">دعم المرضى المحتاجين لتغطية تكاليف العلاج والمساعدة الطبية.</p>
-                    <button class="bg-[#D4AF37] hover:bg-[#B8860B] text-[#225470] px-8 py-3 rounded-full font-bold transition-all shadow-lg hover:shadow-xl flex items-center gap-2 mr-auto">
-                        <span>تبرع الآن</span>
-                    </button>
+                    <a href="html/products.html">
+                        <button class="bg-[#D4AF37] hover:bg-[#B8860B] text-[#225470] px-8 py-3 rounded-full font-bold transition-all shadow-lg hover:shadow-xl flex items-center gap-2 mr-auto">
+                            <span>تبرع الآن</span>
+                        </button>
+                    </a>
                 </div>
             </div>
 
@@ -302,9 +313,11 @@
                 <div class="p-8 text-right relative">
                     <h3 class="text-2xl font-bold mb-4 text-[#225470]">دعم التعليم</h3>
                     <p class="text-[#38755B] mb-8 leading-relaxed">مساعدة الطلاب الذين يعانون من صعوبات مالية لتغطية الرسوم الدراسية.</p>
-                    <button class="bg-[#D4AF37] hover:bg-[#B8860B] text-[#225470] px-8 py-3 rounded-full font-bold transition-all shadow-lg hover:shadow-xl flex items-center gap-2 mr-auto">
-                        <span>تبرع الآن</span>
-                    </button>
+                    <a href="html/products.html">
+                        <button class="bg-[#D4AF37] hover:bg-[#B8860B] text-[#225470] px-8 py-3 rounded-full font-bold transition-all shadow-lg hover:shadow-xl flex items-center gap-2 mr-auto">
+                            <span>تبرع الآن</span>
+                        </button>
+                    </a>
                 </div>
             </div>
 
@@ -318,9 +331,11 @@
                 <div class="p-8 text-right relative">
                     <h3 class="text-2xl font-bold mb-4 text-[#225470]">مساعدة الأسر المحتاجة</h3>
                     <p class="text-[#38755B] mb-8 leading-relaxed">دعم العائلات التي تعاني من أزمات مالية لتوفير الاحتياجات الأساسية.</p>
-                    <button class="bg-[#D4AF37] hover:bg-[#B8860B] text-[#225470] px-8 py-3 rounded-full font-bold transition-all shadow-lg hover:shadow-xl flex items-center gap-2 mr-auto">
-                        <span>تبرع الآن</span>
-                    </button>
+                    <a href="html/products.html">
+                        <button class="bg-[#D4AF37] hover:bg-[#B8860B] text-[#225470] px-8 py-3 rounded-full font-bold transition-all shadow-lg hover:shadow-xl flex items-center gap-2 mr-auto">
+                            <span>تبرع الآن</span>
+                        </button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -409,8 +424,9 @@
 <div class="moon-container"></div>
 
 <script src="js/index.js"></script>
-<script src="js/signedCheck.js"></script>
-    <script src="js/navbarIndex.js"></script>
+<script src="js/navbarIndex.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/alpinejs/3.12.0/cdn.min.js" defer></script>
+
 </body>
 
 </html>
