--- a/html/footer.html
+++ b/html/footer.html
@@ -1,4 +1,3 @@
-<!-- footer.html -->
 <footer class="bg-secondary py-10 text-white">
     <div class="container mx-auto px-4">
       <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
@@ -23,16 +22,16 @@
               <a href="#" class="text-accent hover:text-gold transition-colors">الرئيسية</a>
             </li>
             <li>
-              <a href="#" class="text-accent hover:text-gold transition-colors">من نحن</a>
+              <a href="html\about.html" class="text-accent hover:text-gold transition-colors">من نحن</a>
             </li>
             <li>
-              <a href="#" class="text-accent hover:text-gold transition-colors">المبادرات</a>
+              <a href="html\timeline.html" class="text-accent hover:text-gold transition-colors">مواقيت الصلاة</a>
             </li>
             <li>
-              <a href="#" class="text-accent hover:text-gold transition-colors">التبرع</a>
+              <a href="html\products.html" class="text-accent hover:text-gold transition-colors">التبرع</a>
             </li>
             <li>
-              <a href="#" class="text-accent hover:text-gold transition-colors">تواصل معنا</a>
+              <a href="html/contact.html" class="text-accent hover:text-gold transition-colors">تواصل معنا</a>
             </li>
           </ul>
         </div>
@@ -43,15 +42,15 @@
           <ul class="space-y-2">
             <li class="flex items-center">
               <i class="fas fa-map-marker-alt text-gold ml-2"></i>
-              <span class="text-accent">الرياض، المملكة العربية السعودية</span>
+              <span class="text-accent">عمّان المملكة الأردنية الهاشمية</span>
             </li>
             <li class="flex items-center">
               <i class="fas fa-phone text-gold ml-2"></i>
-              <span class="text-accent">+966 12 345 6789</span>
+              <span class="text-accent">00962788862798</span>
             </li>
             <li class="flex items-center">
               <i class="fas fa-envelope text-gold ml-2"></i>
-              <span class="text-accent">info@yadalkhayr.org</span>
+              <span class="text-accent">07asn.m@gmail.com</span>
             </li>
           </ul>
         </div>
@@ -71,12 +70,6 @@
             <button class="bg-gold hover:bg-darkgold text-white p-2 rounded-l-lg rounded-r-none">
               <i class="fas fa-paper-plane"></i>
             </button>
-          </div>
-          <div class="flex space-x-4 mt-4">
-            <a href="#" class="text-accent hover:text-gold text-xl"><i class="fab fa-facebook"></i></a>
-            <a href="#" class="text-accent hover:text-gold text-xl"><i class="fab fa-twitter"></i></a>
-            <a href="#" class="text-accent hover:text-gold text-xl"><i class="fab fa-instagram"></i></a>
-            <a href="#" class="text-accent hover:text-gold text-xl"><i class="fab fa-youtube"></i></a>
           </div>
         </div>
       </div>
