--- a/html/navbar-index.html
+++ b/html/navbar-index.html
@@ -1,49 +1,167 @@
-<header class="bg-gradient-to-l from-primary to-secondary text-white shadow-lg">
-    <div class="container mx-auto px-4">
-        <nav class="flex justify-between items-center py-3">
-            <!-- Logo -->
-            <a href="../index.html" class="z-10 flex items-center group order-2 md:order-1">
-                <img src="assets/image/image1.png" alt="يد الخير" class="h-11 group-hover:scale-105 transition-transform" />
-            </a>
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
 
-            <!-- Desktop Navigation -->
-            <div class="hidden md:block order-1 md:order-2">
-                <ul class="flex items-center space-x-1">
-                    <li><a href="index.html" class="inline-block py-2 px-4 text-white hover:text-gold">الرئيسية</a></li>
-                    <li><a href="html/products.html" class="inline-block py-2 px-4 text-white hover:text-gold">تبرع</a></li>
-                    <li><a href="html/contact.html" class="inline-block py-2 px-4 text-white hover:text-gold">اتصل بنا</a></li>
-                    <li><a href="html/about.html" class="inline-block py-2 px-4 text-white hover:text-gold">حول</a></li>
-                    <li><a href="html/zakah.html" class="inline-block py-2 px-4 text-white hover:text-gold">حاسبة الزكاة</a></li>
-                    <li><a href="html/timeline.html" class="inline-block py-2 px-4 text-white hover:text-gold">مواقيت الصلاة</a></li>
-                    <li><a href="html/top-donars.html" class="inline-block py-2 px-4 text-white hover:text-gold">أبرز المساهمين</a></li>
-                    <li><a href="html/quran.html" class="inline-block py-2 px-4 text-white hover:text-gold">القرآن</a></li>
-                </ul>
-            </div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/alpinejs/3.12.0/cdn.min.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.js"></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap');
 
-            <div class="order-1 md:order-3 flex items-center space-x-4">
-                <!-- Sign Up Button (hidden for logged in users) -->
-                <a href="login.html" id="signUpButton" class="bg-gold text-primary hover:bg-white hover:text-primary px-6 py-2 rounded-full transition-colors font-bold flex items-center hidden">
-                    سجل معنا
-                </a>
+        body {
+            font-family: 'Tajawal', sans-serif;
+        }
 
-                <!-- Profile and Logout Section (always visible) -->
-                <div id="profileContainer" class="flex items-center space-x-4">
-                    <a href="html/userProfile.html" class="text-white hover:text-gold transition-colors flex items-center">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A4 4 0 018 16h8a4 4 0 012.879 1.804M15 11V9A3 3 0 009 9v2m6 0H9" />
+        .nav-link {
+            position: relative;
+            padding: 0.5rem 0.75rem;
+            color: #4B5563;
+            font-weight: 500;
+            transition: all 0.3s ease;
+        }
+
+        .nav-link:hover {
+            color: #047857;
+        }
+
+        .nav-link::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 0%;
+            height: 2px;
+            background-color: #047857;
+            transition: width 0.3s ease;
+        }
+
+        .nav-link:hover::after {
+            width: 100%;
+        }
+
+        .logo-text {
+            background: linear-gradient(135deg, #047857, #065f46);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            font-weight: 700;
+        }
+
+        .mobile-menu {
+            transform-origin: top;
+            transition: transform 0.3s ease-in-out;
+        }
+
+        .mobile-menu.hidden {
+            transform: scaleY(0);
+        }
+
+        .mobile-menu.block {
+            transform: scaleY(1);
+        }
+
+        .donate-btn {
+            background: linear-gradient(135deg, #047857, #065f46);
+            transition: all 0.3s ease;
+        }
+
+        .donate-btn:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+    </style>
+</head>
+
+<body class="bg-gray-50">
+    <nav x-data="{ open: false }" class="bg-green-50 shadow-md sticky top-0 z-50">
+        <div class="container mx-auto px-4 md:px-6">
+            <div class="flex justify-between items-center h-20">
+                <!-- Logo -->
+                <div class="flex items-center">
+                    <a href="index.html" class="flex items-center space-x-2 space-x-reverse">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-green-700" fill="none"
+                            viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"
+                                d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
                         </svg>
-                        <span class="ml-1">الملف الشخصي</span>
-                    </a>
-                    <a href="html/login.html" id="logoutBtn" class="bg-gold text-primary hover:bg-white hover:text-primary px-4 py-2 rounded-full transition-colors font-bold flex items-center">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-1" viewBox="0 0 20 20" fill="currentColor">
-                            <path fill-rule="evenodd" d="M6 4H10V6H7V14H10V16H6V4ZM14 8C14.5523 8 15 8.44771 15 9V11C15 11.5523 14.5523 12 14 12H10V8H14Z" clip-rule="evenodd" />
-                        </svg>
-                        تسجيل الخروج
+                        <span class="text-2xl logo-text font-bold">يد الخير</span>
                     </a>
                 </div>
-            </div>
-        </nav>
-    </div>
-</header>
 
-<script src="/js/signedCheck.js"></script>
+                <!-- Desktop Menu -->
+                <div class="hidden lg:flex items-center space-x-1 space-x-reverse">
+                    <a href="index.html"      class="nav-link">الرئيسية</a>
+                    <a href="html/about.html"      class="nav-link">حول</a>
+                    <a href="html/top-donars.html" class="nav-link">أبرز المساهمين</a>
+                    <a href="html/zakah.html"      class="nav-link">حاسبة الزكاة</a>
+                    <a href="html/timeline.html"   class="nav-link">مواقيت الصلاة</a>
+                    <a href="html/quran.html"      class="nav-link">القرآن</a>
+                    <a href="html/contact.html"    class="nav-link">اتصل بنا</a>
+                    <a href="html/products.html"   class="donate-btn text-white px-6 py-2 rounded-full mr-4 font-medium">تبرع الآن</a>
+                    <a href="html/index.html"      class="bg-gray-800 text-white px-6 py-2 rounded-full mr-4 font-medium">تسجيل الدخول</a>
+                </div>
+
+                <!-- Profile Icon & Mobile Menu Button -->
+                <div class="flex items-center space-x-4 space-x-reverse">
+                    <a href="html/login.html" class="relative p-2 text-gray-700 hover:text-green-700 transition-colors">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"
+                                d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
+                        </svg>
+                        <span
+                            class="absolute top-0 right-0 h-2 w-2 bg-green-500 rounded-full transform translate-x-1/4 -translate-y-1/4"></span>
+                    </a>
+
+                    <!-- Mobile Menu Button -->
+                    <button @click="open = !open" class="lg:hidden focus:outline-none" aria-label="القائمة">
+                        <div class="w-6 flex flex-col justify-between items-center h-5">
+                            <span class="block h-0.5 w-full bg-gray-600 transition-all duration-300"
+                                :class="{'rotate-45 translate-y-2': open}"></span>
+                            <span class="block h-0.5 w-full bg-gray-600 transition-all duration-300"
+                                :class="{'opacity-0': open}"></span>
+                            <span class="block h-0.5 w-full bg-gray-600 transition-all duration-300"
+                                :class="{'-rotate-45 -translate-y-2': open}"></span>
+                        </div>
+                    </button>
+                </div>
+            </div>
+
+            <!-- Mobile Menu -->
+            <div x-show="open" @click.away="open = false" x-transition:enter="transition ease-out duration-200"
+                x-transition:enter-start="opacity-0 transform -translate-y-4"
+                x-transition:enter-end="opacity-100 transform translate-y-0"
+                x-transition:leave="transition ease-in duration-150"
+                x-transition:leave-start="opacity-100 transform translate-y-0"
+                x-transition:leave-end="opacity-0 transform -translate-y-4"
+                class="lg:hidden bg-white border-t border-gray-100 py-3">
+                <div class="flex flex-col space-y-3 px-4">
+                    <a href="index.html"
+                        class="block py-2 hover:bg-gray-50 rounded-md px-3 font-medium text-gray-700 hover:text-green-700">الرئيسية</a>
+                    <a href="html/about.html"
+                        class="block py-2 hover:bg-gray-50 rounded-md px-3 font-medium text-gray-700 hover:text-green-700">حول</a>
+                    <a href="html/top-donars.html"
+                        class="block py-2 hover:bg-gray-50 rounded-md px-3 font-medium text-gray-700 hover:text-green-700">أبرز
+                        المساهمين</a>
+                    <a href="html/zakah.html"
+                        class="block py-2 hover:bg-gray-50 rounded-md px-3 font-medium text-gray-700 hover:text-green-700">حاسبة
+                        الزكاة</a>
+                    <a href="html/timeline.html"
+                        class="block py-2 hover:bg-gray-50 rounded-md px-3 font-medium text-gray-700 hover:text-green-700">مواقيت
+                        الصلاة</a>
+                    <a href="html/quran.html"
+                        class="block py-2 hover:bg-gray-50 rounded-md px-3 font-medium text-gray-700 hover:text-green-700">القرآن</a>
+                    <a href="html/contact.html"
+                        class="block py-2 hover:bg-gray-50 rounded-md px-3 font-medium text-gray-700 hover:text-green-700">اتصل
+                        بنا</a>
+                    <a href="html/products.html"
+                        class="donate-btn text-white py-3 mt-2 rounded-md text-center font-medium">تبرع الآن</a>
+                    <a href="index.html"
+                        class="bg-gray-800 text-white py-2 mt-2 rounded-md text-center font-medium">تسجيل الخروج </a>
+                </div>
+            </div>
+        </div>
+    </nav>
+</body>
+
+</html>
