--- a/html/quran.html
+++ b/html/quran.html
@@ -445,5 +445,7 @@
             document.getElementById('navbar-placeholder').innerHTML = data;
           });
       </script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/alpinejs/3.12.0/cdn.min.js" defer></script>
+
   </body>
 </html>
