--- a/html/timeline.html
+++ b/html/timeline.html
@@ -326,6 +326,8 @@
   <!---------------------------------------- Footer ---------------------------------------->
 <div id="footer-placeholder"></div>
 <!---------------------------------------- Footer ---------------------------------------->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/alpinejs/3.12.0/cdn.min.js" defer></script>
+
 </body>
 
 </html>
