--- a/html/zakah.html
+++ b/html/zakah.html
@@ -248,6 +248,8 @@
   <div id="footer-placeholder"></div>
   <!---------------------------------------- Footer ---------------------------------------->
   <script src="zakah.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/alpinejs/3.12.0/cdn.min.js" defer></script>
+
 </body>
 
 </html>
