--- a/html/footer.html
+++ b/html/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-secondary py-10 text-white">
+<footer class="bg-gray-800 py-10 text-white">
     <div class="container mx-auto px-4">
       <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
         <div>
@@ -19,7 +19,7 @@
           </h3>
           <ul class="space-y-2">
             <li>
-              <a href="#" class="text-accent hover:text-gold transition-colors">الرئيسية</a>
+              <a href="index.html" class="text-accent hover:text-gold transition-colors">الرئيسية</a>
             </li>
             <li>
               <a href="html\about.html" class="text-accent hover:text-gold transition-colors">من نحن</a>
