--- a/html/navbar-index.html
+++ b/html/navbar-index.html
@@ -98,7 +98,7 @@
                     <a href="html/quran.html"      class="nav-link">القرآن</a>
                     <a href="html/contact.html"    class="nav-link">اتصل بنا</a>
                     <a href="html/products.html"   class="donate-btn text-white px-6 py-2 rounded-full mr-4 font-medium">تبرع الآن</a>
-                    <a href="html/index.html"      class="bg-gray-800 text-white px-6 py-2 rounded-full mr-4 font-medium">تسجيل الدخول</a>
+                    <a href="html/login.html"      class="bg-gray-800 text-white px-6 py-2 rounded-full mr-4 font-medium">تسجيل الدخول</a>
                 </div>
 
                 <!-- Profile Icon & Mobile Menu Button -->
