--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 </div>
 
                 <div class="flex flex-col md:flex-row justify-center mt-12 gap-4">
-                    <a href="/html/about.html"
+                    <a href="html/about.html"
                         class="bg-[#D4AF37] hover:bg-[#B8860B] text-white px-8 py-4 rounded-lg transition duration-300 shadow-md flex items-center justify-center">
                         <span>تعرف علينا</span>
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20"
@@ -193,7 +193,7 @@
                                 clip-rule="evenodd" />
                         </svg>
                     </a>
-                    <a href="/html/top-donars.html"
+                    <a href="html/top-donars.html"
                         class="bg-white border-2 border-[#1E5631] text-[#1E5631] hover:bg-gray-50 px-8 py-4 rounded-lg transition duration-300 shadow-md flex items-center justify-center">
                         <span>أبرز المساهمون</span>
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20"
