--- a/html/about.html
+++ b/html/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>من نحن - إحسان</title>
+    <title>من نحن - يد الخير</title>
     <!-- تحميل Tailwind CSS عبر CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -162,11 +162,11 @@
                         <h2 class="text-2xl font-bold text-primary mb-4">من نحن</h2>
                         <div class="about-card bg-white rounded-lg p-6 shadow-md">
                             <p class="text-gray-700 mb-4">
-                                موقع <span class="font-bold text-primary">إحسان</span> هو منصة خيرية غير ربحية تأسست عام
+                                موقع <span class="font-bold text-primary">يد الخير</span> هو منصة خيرية غير ربحية تأسست عام
                                 2017، تهدف إلى تقديم الدعم والمساعدة للمحتاجين وتعزيز روح التكافل الاجتماعي في مجتمعنا.
                             </p>
                             <p class="text-gray-700 mb-4">
-                                نسعى من خلال "إحسان" إلى تحقيق الشفافية والاحترافية في تقديم الخدمات الخيرية، مع التركيز
+                                نسعى من خلال "يد الخير" إلى تحقيق الشفافية والاحترافية في تقديم الخدمات الخيرية، مع التركيز
                                 على دعم الأسر الفقيرة، تمكين الأيتام، ودعم التعليم والرعاية الصحية.
                             </p>
                             <ul class="list-disc list-inside text-gray-700 mb-4 mr-4">
@@ -176,7 +176,7 @@
                                 <li>مشاريع إفطار الصائم والفعاليات الرمضانية</li>
                             </ul>
                             <p class="text-gray-700">
-                                نؤمن بأن العمل الخيري هو جسراً لبناء مجتمع متماسك، ونسعى لأن يكون موقع "إحسان" علامة
+                                نؤمن بأن العمل الخيري هو جسراً لبناء مجتمع متماسك، ونسعى لأن يكون موقع "يد الخير" علامة
                                 فارقة في دعم وتغيير حياة الكثيرين.
                             </p>
                         </div>
@@ -273,6 +273,8 @@
     </div>
     <!---------------------------------------- Footer ---------------------------------------->
     <div id="footer-placeholder"></div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/alpinejs/3.12.0/cdn.min.js" defer></script>
+
     <!---------------------------------------- Footer ---------------------------------------->
 </body>
 
