--- a/html/contact.html
+++ b/html/contact.html
@@ -191,6 +191,8 @@
     <!---------------------------------------- Footer ---------------------------------------->
 <div id="footer-placeholder"></div>
 <!---------------------------------------- Footer ---------------------------------------->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/alpinejs/3.12.0/cdn.min.js" defer></script>
+
 </body>
 
 </html>
