--- a/html/navbar-index.html
+++ b/html/navbar-index.html
@@ -156,7 +156,7 @@
                         بنا</a>
                     <a href="html/products.html"
                         class="donate-btn text-white py-3 mt-2 rounded-md text-center font-medium">تبرع الآن</a>
-                    <a href="index.html"
+                    <a href="html/login.html"
                         class="bg-gray-800 text-white py-2 mt-2 rounded-md text-center font-medium">تسجيل الدخول </a>
                 </div>
             </div>
